change settings for serving static files

--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ django-cors-headers = "*"
 django-rest-auth = "*"
 psycopg2 = "*"
 gunicorn = "*"
+whitenoise = "*"
 
 [requires]
 python_version = "3.8"
