--- a/Pipfile
+++ b/Pipfile
@@ -12,7 +12,7 @@ django-cors-headers = "*"
 django-rest-auth = "*"
 psycopg2 = "*"
 gunicorn = "*"
-whitenoise = "*"
+whitenoise = "==4.1.4"
 
 [requires]
 python_version = "3.8"
